@@ -3,6 +3,7 @@ Jacksum 3.0.1-not-yet-released
 - bugs fixed
 
     - `jacksum -h examples` showed only 3 sections, now it shows all sections
+    - removed the lab-remnant hex-camelcase from the code
 
 Jacksum 3.0.0, Sep 4, 2021
 
